--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "acl": "^0.4.10",
     "body-parser": "^1.17.2",
+    "busca-cep": "^0.5.0",
     "cheerio": "^1.0.0-rc.2",
     "compression": "^1.7.0",
     "crypto": "^1.0.1",
